Fixed images being stretched
Reference store item page in portal v2

Also updated Cyber images

--- a/src/sections/community/styles.scss
+++ b/src/sections/community/styles.scss
@@ -383,13 +383,16 @@
     }
 
     .nextImageHolder {
-      object-fit: cover;
       overflow: hidden;
       border-radius: 20px;
       width: 100%;
       height: 100%;
       margin-bottom: 0;
       position: relative;
+
+      img{
+        object-fit: cover;
+      }
     }
 
     .pic1 {
